--- a/CRUD_App1/pom.xml
+++ b/CRUD_App1/pom.xml
@@ -74,6 +74,13 @@
       <version>8.0.1.Final</version>
     </dependency>
 
+     <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.1.0</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
