--- a/Project1_Spring/pom.xml
+++ b/Project1_Spring/pom.xml
@@ -96,6 +96,13 @@
       <version>8.1.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.27</version>
+    </dependency>
+
   </dependencies>
 
   <build>
