--- a/HibernateApp1/pom.xml
+++ b/HibernateApp1/pom.xml
@@ -33,11 +33,11 @@
       <version>42.4.3</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>6.2.7.Final</version>
+      <version>6.1.7.Final</version>
     </dependency>
   </dependencies>
 
